[tool.poetry]
name 		= "src"
readme 		= "README.md"
version 	= "0.1.0"
authors 	= ["Sean A. Burner"]
description 	= "Day_Trade"

[tool.poetry.dependencies]
python   		= "^3.11"
numpy 			= "^2.3"
pandas   		= "^2.0"
requests 		= "^2.32"


[tool.poetry.group.dev.dependencies]
tox = "^4.26.0"
pytest = "^8.3.5"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
